[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/save_game_menu/save_game_widget.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="save_game_widget" type="Control"]
margin_right = 1516.0
margin_bottom = 120.0
rect_min_size = Vector2( 30, 120 )
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="save_name" type="LineEdit" parent="."]
anchor_left = 0.408971
anchor_top = 0.258333
anchor_right = 0.609499
anchor_bottom = 0.585
margin_right = 58.0
margin_bottom = 24.0
text = "save name"
max_length = 30
__meta__ = {
"_edit_use_anchors_": true
}

[node name="save_date" type="Label" parent="."]
anchor_left = 0.84038
anchor_top = 0.504167
anchor_right = 0.84038
anchor_bottom = 0.504167
margin_left = -240.0
margin_top = -28.0
margin_bottom = 28.0
custom_styles/normal = SubResource( 2 )
text = "save dat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="load_button" type="Button" parent="."]
anchor_left = 0.0659631
anchor_top = 0.266667
anchor_right = 0.0659631
anchor_bottom = 0.266667
margin_right = 182.0
margin_bottom = 64.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="save_button" type="Button" parent="."]
anchor_left = 0.222955
anchor_top = 0.266667
anchor_right = 0.222955
anchor_bottom = 0.266667
margin_right = 182.0
margin_bottom = 64.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="delete_button" type="Button" parent="."]
anchor_left = 0.897098
anchor_top = 0.25
anchor_right = 0.920844
anchor_bottom = 0.25
margin_right = 100.0
margin_bottom = 60.0
text = "Delete save"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="focus_exited" from="save_name" to="." method="change_save_name"]
[connection signal="text_entered" from="save_name" to="." method="change_save_name"]
